--- a/Business Side/signup.css
+++ b/Business Side/signup.css
@@ -13,7 +13,6 @@ body, html {
     max-width: 350px;
     padding: 40px 40px;
 }
-
 .btn {
     font-weight: 700;
     height: 36px;
@@ -27,7 +26,7 @@ body, html {
  * Card component
  */
 .card {
-    background-color: #F7F7F7;
+    background-color: #6f6f70;
     /* just in case there no content*/
     padding: 20px 25px 30px;
     margin: 0 auto 25px;
@@ -126,15 +125,16 @@ body, html {
 .btn.btn-signin:hover,
 .btn.btn-signin:active,
 .btn.btn-signin:focus {
-    background-color: rgb(12, 97, 33);
+    background-color: rgb(212, 34, 72);
 }
 
 .forgot-password {
-    color: rgb(104, 145, 162);
+    color: rgb(71, 171, 255);
 }
 
 .forgot-password:hover,
 .forgot-password:active,
 .forgot-password:focus{
-    color: rgb(12, 97, 33);
+    color: rgb(212, 34, 72);
 }
+
