--- a/Business Side/signup.css
+++ b/Business Side/signup.css
@@ -8,7 +8,9 @@ body, html {
     height: 100%;
     background-color: white;
 }
-
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: grey;
+}
 .card-container.card {
     max-width: 350px;
     padding: 40px 40px;
@@ -138,3 +140,6 @@ body, html {
     color: rgb(212, 34, 72);
 }
 
+input{
+    border-color: darkgray;
+}
