--- a/Css/note.css
+++ b/Css/note.css
@@ -1,4 +1,4 @@
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+:-webkit-input-placeholder { /* Chrome/Opera/Safari */
     color: grey;
 }
 .card-container.card {
